Angular Componentes II

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h1>Hola mundo</h1>
 <h2>{{title}}</h2>
 <app-empleados></app-empleados>
+<app-empleado></app-empleado>
+<app-empleado></app-empleado>
+<app-empleado></app-empleado>
