--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,1 +1,5 @@
 <p>aqui iria un empleado</p>
+<p>nombre del empleado es {{nombre}}</p>
+<p>apellido del empleado es {{apellido}}</p>
+<p>edad del empleado es : {{edad<18 ? "menor de edad":"mayor de edad"}}</p>
+<p>empresa del empleado es {{empresa}}</p>
